syntax = "proto3";

package rpcProtos;

service Account {
	rpc Heartbeat(HeartbeatReq) returns (HeartbeatRsp){}
	rpc Register(RegisterReq) returns (RegisterRsp) {}
	rpc Login(LoginReq) returns (LoginRsp) {}
}

message HeartbeatReq{}
message HeartbeatRsp{}

message RegisterReq{
	string account=1;
	string password=2;
}
message RegisterRsp{
	int32 retCode=1;	//0成功；其他失败；
	int32 uid=2;
	string desc=3;
}

message LoginReq{
	string account=1;
	string password=2;
}
message LoginRsp{
	int32 retCode=1;	//0成功；其他失败；
	int32 uid=2;
	string desc=3;
}
